force-app/main/default/objects/Cpm_Component_Package_Update__e/Cpm_Component_Package_Update__e.object-meta.xml
<CustomObject>
    <description>Event signifying a change to an event that should be reflected in the front end interface.</description>
    <label>Cpm Component Update</label>
    <pluralLabel>Cpm Component Updates</pluralLabel>
</CustomObject>