force-app/main/default/objects/Cpm_Component_Package_Update__e/fields/Cpm_Component_Package_Id__c.field-meta.xml
<CustomField>
    <fullName>Component_Package_Id__c</fullName>
    <label>Demo Component Id</label>
    <length>55</length>
    <type>Text</type>
</CustomField>