force-app/main/default/objects/Cpm_Component_Package_Update__e/fields/Cpm_Component_Package_JSON__c.field-meta.xml
<CustomField>
    <fullName>Cpm_Component_Package_JSON__c</fullName>
    <label>Demo Component JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>