force-app/main/default/objects/Cpm_Component_Package_Update__e/fields/Delete_Flag__c.field-meta.xml
<CustomField>
    <fullName>Delete_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Flag</label>
    <type>Checkbox</type>
</CustomField>